--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -355,6 +355,9 @@ footer .footer-wrapper #footerbox.active ul{display: block;}
 .go-to-checkout-box .people-added h3{color: #12284C;font-weight: bold;font-size: 20px;margin-top: 37px;}
 .go-to-checkout-box .people-added .cheese-box{background: #FFFFFF;box-shadow: 0px 10px 25px #00000014;border: 1px solid #E5E5E56B;min-width: 250px;margin-right: 15px;padding: 16px;margin-top: 23px;margin-bottom: 23px;}
 .go-to-checkout-box .people-added .grilled-cheese-grid{display: flex;overflow-x: scroll;}
+.go-to-checkout-box .people-added .grilled-cheese-grid::-webkit-scrollbar {width: 0.5em; }
+.go-to-checkout-box .people-added .grilled-cheese-grid::-webkit-scrollbar-track {background:#fff;}
+.go-to-checkout-box .people-added .grilled-cheese-grid::-webkit-scrollbar-thumb {background-color: #dee2e6; border-radius:10px; border:4px solid #fff; }
 .go-to-checkout-box .people-added .cheese-box h4{color: #4C4C4C;font-size: 15px;font-weight: 600;}
 .go-to-checkout-box .people-added .cheese-box span{color: #A7A7A7;font-weight: 500;font-size: 14px;display: inline-block;margin-top: 15px;}
 .go-to-checkout-box .people-added .cheese-box a{display: inline-block;color: #12284C;font-weight: 500;font-size: 14px;margin-left: 7px;margin-top: 19px;}
@@ -507,53 +510,46 @@ footer .footer-wrapper #footerbox.active ul{display: block;}
 
 /* Steamed Pork & Vegetable Dumpling START */
 
-.listing-popup1-wrapper{background: rgb(253, 253, 253);border:1px solid rgb(231, 229, 229);width: 830px;padding: 34px 27px;position: relative;}
-.listing-popup1-wrapper .popup1-cross-icon{position: absolute;right: 0px;top:15px;}
-.listing-popup1-wrapper h2 { font-size: 30px;font-weight:600;color: #12284C;padding-top: 20px;}
-.listing-popup1-wrapper .prag-bottom{font-size: 19px;color: #747474;font-weight: 500;padding-bottom: 15px;border-bottom: 1px solid #E5E5E5;padding-top: 10px;}  
-.listing-popup1-wrapper .Optional-head h2{font-size: 26px;font-weight:600;color: #12284C;padding-top: 45px;}
-.listing-popup1-wrapper .Optional-head p {font-size: 19px;color: #747474;line-height:25px;font-weight: 400;}
+.listing-popup1-wrapper{background: rgb(253, 253, 253);border:1px solid rgb(231, 229, 229);width: 830px;padding: 34px;position: relative;}
+.listing-popup1-wrapper .popup1-cross-icon{position: absolute;right: 0px;top: 2px;}
+.listing-popup1-wrapper h2 {font-size: 28px;font-weight:600;color: #12284C;margin: 0;}
+.listing-popup1-wrapper .prag-bottom{font-size: 18px;color: #747474;padding-bottom: 15px;border-bottom: 1px solid #E5E5E5;padding-top: 10px;}  
+.listing-popup1-wrapper .Optional-head h2{font-size: 24px;font-weight:600;color: #000;padding: 40px 0 10px;margin: 0;}
+.listing-popup1-wrapper .Optional-head p {font-size: 17px;color: #747474;line-height:25px;font-weight: 400;}
 .listing-popup1-wrapper .checkbox-content h2{font-size: 26px;color: #000000;}
-.listing-popup1-wrapper .form-check{padding-bottom: 0px;margin-top: 20px;}
-.listing-popup1-wrapper .form-check .form-check-label{font-size: 20px;color: #747474;font-weight: 500;}
-.listing-popup1-wrapper .checkbox-area{display: flex;align-items: center;justify-content: space-between;margin-bottom: -12px;}
+.listing-popup1-wrapper .form-check{padding: 10px 0;}
+.listing-popup1-wrapper .form-check input{opacity:0; position:absolute;left:-100000%; top:-1000%; visibility:hidden;}
+.listing-popup1-wrapper .form-check input:checked + .form-check-label:after {content:'';height: 9px;width: 20px;border-bottom: 3px solid #20b820;border-left: 3px solid #20b820;transform:rotate(-45deg);display:block;position:absolute;top: 2px;left: 5px;}
+.listing-popup1-wrapper .form-check .form-check-label:before{content:'';height: 24px;width: 24px;display:block;border: 2px solid #e5e5e5;position:absolute;left:0;top:0;}
+.listing-popup1-wrapper .form-check .form-check-label{font-size: 18px;color: #747474;font-weight: 500;cursor: pointer;position:relative;padding: 0 0 0 40px;}
+.listing-popup1-wrapper .checkbox-area{display: flex;align-items: center;justify-content: space-between;}
 .listing-popup1-wrapper .form-check-label{font-size: 14px;color: #12284C;}
 .listing-popup1-wrapper .checkbox{padding-left: 15px;}
-.listing-popup1-wrapper .price p{color: #747474;}
+.listing-popup1-wrapper .price p{color: #747474;margin: 0;font-family: open sans;}
 .listing-popup1-wrapper .address p{font-size: 18px;line-height: 20px;padding-left: 15px;}
-.listing-popup1-wrapper .popup1-button{display: flex;align-items: center;justify-content: space-between; padding: 40px 0;}
-.listing-popup1-wrapper .button1 .btn{width: 302px;height: 66px;font-size: 16px;font-weight: 500;border-radius: 125px;border-color: #D4D4D4;color: rgb(0, 0, 0); }
-.listing-popup1-wrapper .button2 .btn{width: 447px;height: 66px;background-color: #12284C;font-size: 16px;font-weight: 500;border-radius: 125px;color: rgb(255, 255, 255); }
+.listing-popup1-wrapper .popup1-button{display: flex;align-items: center;justify-content: space-between;padding: 40px 0 10px;}
+.listing-popup1-wrapper .button1 .btn{width: 302px;height: 60px;font-size: 15px;font-weight: 500;border-radius: 125px;border-color: #D4D4D4;color: rgb(0, 0, 0);}
+.listing-popup1-wrapper .button2 .btn{width: 437px;height: 60px;background-color: #12284C;font-size: 15px;font-weight: 500;border-radius: 125px;color: rgb(255, 255, 255);}
 .listing-popup1-wrapper .popup-image{width: auto;height: 293px;background-color:#DBDBDB;margin: 20px 0;}
 
 
-.listing-popup1{background-color: #fff;z-index: 99;position: relative;}
-.listing-popup1 .back-overlay {width: 100%;height: 100vh;background-color: rgba(0,0,0,0.5);position: fixed;top: 0;left: 0;display: none;}
-#listing-popup1.active .back-overlay {display: block;}
-#listing-popup1.active .listing-popup1-wrapper {transition: .3s ease-in-out;transform: translate(-50%,-50%) scale(1);}
-.listing-popup1 .listing-popup1-wrapper {max-height: calc(100% + 2px);overflow-y: auto;overflow-x: hidden;overscroll-behavior:contain;background: #fff;position: fixed;top: 50%;left: 50%;transform: translate(-50%,-50%);transform: translate(-50%,-50%) scale(0);z-index: 1;}
+.custom-modal {background-color: #fff;z-index: 99;position: relative;}
+.custom-modal:before {content:'';background-color: rgba(0,0,0,0.5);position: fixed;top: 0;left: 0; right:0; bottom:0; display: none;}
+.custom-modal.active:before {display: block;}
+.custom-modal.active .listing-popup1-wrapper {transition: .3s ease-in-out;transform: translate(-50%,-50%) scale(1);}
+.custom-modal .listing-popup1-wrapper {max-height: 92%;overflow-y: auto;overflow-x: hidden;overscroll-behavior:contain;background: #fff;position: fixed;top: 50%;left: 50%;transform: translate(-50%,-50%);transform: translate(-50%,-50%) scale(0);z-index: 1;}
+.custom-modal .listing-popup1-wrapper::-webkit-scrollbar {width: 0.8em; }
+.custom-modal .listing-popup1-wrapper::-webkit-scrollbar-track {background:#fff;}
+.custom-modal .listing-popup1-wrapper::-webkit-scrollbar-thumb {background-color: darkgrey; border:4px solid #fff; }
 
 
-.listing-popup2{background-color: #fff;z-index: 99;position: relative;}
-.listing-popup2 .back-overlay {width: 100%;height: 100vh;background-color: rgba(0,0,0,0.5);position: fixed;top: 0;left: 0;display: none;}
-#listing-popup2.active .back-overlay {display: block;}
-#listing-popup2.active .listing-popup1-wrapper {transition: .3s ease-in-out;transform: translate(-50%,-50%) scale(1);}
-.listing-popup2 .listing-popup1-wrapper {max-height: calc(100% + 2px);overflow-y: auto;overflow-x: hidden;overscroll-behavior:contain;background: #fff;position: fixed;top: 50%;left: 50%;transform: translate(-50%,-50%);transform: translate(-50%,-50%) scale(0);z-index: 1;}
 
 
 .listing-popup3 .addup-option{display: flex;align-items: center;justify-content: center;padding: 40px;border-bottom: 1px solid #E5E5E5;}
 .listing-popup3 .addup-option .addup{padding-right: 65px;}
-.listing-popup3{background-color: #fff;z-index: 99;position: relative;}
-.listing-popup3 .back-overlay {width: 100%;height: 100vh;background-color: rgba(0,0,0,0.5);position: fixed;top: 0;left: 0;display: none;}
-#listing-popup3.active .back-overlay {display: block;}
-#listing-popup3.active .listing-popup1-wrapper {transition: .3s ease-in-out;transform: translate(-50%,-50%) scale(1);}
-.listing-popup3 .listing-popup1-wrapper {max-height: calc(100% + 2px);overflow-y: auto;overflow-x: hidden;overscroll-behavior:contain;background: #fff;position: fixed;top: 50%;left: 50%;transform: translate(-50%,-50%);transform: translate(-50%,-50%) scale(0);z-index: 1;}
+
 
 .listing-popup4{background-color: #fff;z-index: 99;position: relative;}
-.listing-popup4 .back-overlay {width: 100%;height: 100vh;background-color: rgba(0,0,0,0.5);position: fixed;top: 0;left: 0;display: none;}
-#listing-popup4.active .back-overlay {display: block;}
-#listing-popup4.active .listing-popup1-wrapper {transition: .3s ease-in-out;transform: translate(-50%,-50%) scale(1);}
-.listing-popup4 .listing-popup1-wrapper {max-height: calc(100% + 2px);overflow-y: auto;overflow-x: hidden;overscroll-behavior:contain;background: #fff;position: fixed;top: 50%;left: 50%;transform: translate(-50%,-50%);transform: translate(-50%,-50%) scale(0);z-index: 1;}
 .listing-popup4 .listing-popup1-wrapper .info-blog{display: flex;}
 .listing-popup4 .listing-popup1-wrapper .close-button .btn{margin: 40px 0;width: 447px;height: 59px;background-color: #12284C;font-size: 16px;font-weight: 500;border-radius: 50px;color: white;margin: auto;}
 .listing-popup4 .listing-popup1-wrapper .title img{position: absolute;top: 50%;right: 0;transform: translateY(-50%);}
