--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -306,25 +306,27 @@ footer .footer-wrapper #footerbox.active ul{display: block;}
 .main-listing .listing-wrapper .products-grid .actions a{background-color: #12284c;display: inline-block;color: #FFFFFF;font-weight: 500;font-size: 13px;display: flex;justify-content: space-between;width: 140px;height: 33px;text-align: center;line-height: 33px;padding: 0 10px;border-radius: 4px;margin: 30px 0;}
 .main-listing .listing-wrapper .products-grid .actions a img{width: 10px;}
 .main-listing .listing-wrapper .products-grid .product-grid-wrapper h4{color:#828484;font-size: 15px;letter-spacing: 0.3px;font-weight: 500;}
-.main-listing .listing-wrapper .products-grid .product-grid-wrapper .product-box{margin: 0 auto 50px;max-width: 375px;}
+.main-listing .listing-wrapper .products-grid .product-grid-wrapper .product-box{margin: 0 auto 20px;max-width: 375px;}
 .main-listing .listing-wrapper .products-grid .product-grid-wrapper .image-wrapper{position: relative;}
 .main-listing .listing-wrapper .products-grid .product-grid-wrapper .image-wrapper a.image{display: block;position: relative;overflow: hidden;}
 .main-listing .listing-wrapper .products-grid .product-grid-wrapper .image-wrapper a.image:after{content:''; display:block; padding-bottom:63%;}
-.main-listing .listing-wrapper .products-grid .product-grid-wrapper .image-wrapper a.image img{min-width: 100%;position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);-webkit-transform: translate(-50%, -50%);}
-.main-listing .listing-wrapper .product-grid-wrapper .image-wrapper .free-delivery {position:absolute;top:12px; left:13px;}
+.main-listing .listing-wrapper .products-grid .product-grid-wrapper .image-wrapper a.image img{min-width: 100%;position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);-webkit-transform: translate(-50%, -50%);border-radius: 4px;}
+.main-listing .listing-wrapper .product-grid-wrapper .image-wrapper .free-delivery {position:absolute;top:15px; left:13px;}
 .main-listing .listing-wrapper .product-grid-wrapper .image-wrapper .free-delivery a{background:#12284c;display: inline-block;width: auto;height: 26px;line-height: 26px;font-size: 9px;color: #fff;padding:0 8px;border-radius: 4px;}
 .main-listing .listing-wrapper .product-grid-wrapper .image-wrapper .free-delivery a:hover{text-decoration:none;}
 .main-listing .listing-wrapper .product-grid-wrapper .image-wrapper .time-duration{text-align:center;box-shadow: 0px 3px 6px #00000017;border-radius: 125px;background: #FFFFFF;width: 85px;height: 45px;display: flex;flex-direction: column;justify-content: center;line-height: 100%;position: absolute;right: 10px;bottom: -20px;}
 .main-listing .listing-wrapper .product-grid-wrapper .image-wrapper .time-duration .time{font-size: 15px;letter-spacing: 0.28px;color: #222222;font-weight: bold;font-family: open sans;}
 .main-listing .listing-wrapper .product-grid-wrapper .image-wrapper .time-duration .min{font-size: 12px;font-weight: 600;letter-spacing: 0.23px;color: #747474;}
-.main-listing .listing-wrapper .product-grid-wrapper .details h3{font-size: 18px;letter-spacing: 0.34px;color: #222222;font-weight: bold;padding-top: 16px;}
+.main-listing .listing-wrapper .product-grid-wrapper .details h3{margin-bottom:5px;font-size: 14px;letter-spacing: 0.34px;color: #222222;font-weight: bold;padding-top: 5px;}
 .main-listing .listing-wrapper .product-grid-wrapper .details ul{display: flex;margin-bottom: 0;}
 .main-listing .listing-wrapper .product-grid-wrapper .details ul li a{letter-spacing: 0.28px;color: #828484;font-size: 14px;}
 .main-listing .listing-wrapper .product-grid-wrapper .details ul li a:hover {color:#12284c}
 .main-listing .listing-wrapper .product-grid-wrapper .details ul li a:after{content:'';height: 4px;width: 4px;margin: 3px 8px 3px;display: inline-block;background: #ddd;border-radius: 50%;}
 .main-listing .listing-wrapper .product-grid-wrapper .details ul li:last-child a:after {display:none;}
 .main-listing .listing-wrapper .product-grid-wrapper .details .credit a{font-size: 14px;display: inline-block;font-weight: 500;color: #12284C;margin-left: 8px;}
-.main-listing .listing-wrapper .product-grid-wrapper .details .credit{margin-top: 15px;}
+.main-listing .listing-wrapper .product-grid-wrapper .details .credit{margin-top: 5px;}
+.main-listing .listing-wrapper .products-grid .product-grid-wrapper .col-lg-4{padding-left: 8px;padding-right: 8px;}
+
 
 .main-listing .paging{border: 1px solid #e5e5e5;display: inline-flex;align-items: center;margin: 25px auto 60px;border-radius: 4px;}
 .main-listing .paging a{width: 58px;display: inline-block;text-align: center;color: #000000;font-weight: 400;border-right: 1px solid #e5e5e5;height: 100%;line-height: 58px;font-size: 21px;}
@@ -510,13 +512,15 @@ footer .footer-wrapper #footerbox.active ul{display: block;}
 
 /* Steamed Pork & Vegetable Dumpling START */
 
-.listing-popup1-wrapper{background: rgb(253, 253, 253);border:1px solid rgb(231, 229, 229);width: 830px;padding: 34px;position: relative;}
+.listing-popup1-wrapper{font-size:16px;background: rgb(253, 253, 253);border:1px solid rgb(231, 229, 229);width: 560px;position: relative;}
 .listing-popup1-wrapper .popup1-cross-icon{position: absolute;right: 0px;top: 2px;}
-.listing-popup1-wrapper h2 {font-size: 28px;font-weight:600;color: #12284C;margin: 0;}
-.listing-popup1-wrapper .prag-bottom{font-size: 18px;color: #747474;padding-bottom: 15px;border-bottom: 1px solid #E5E5E5;padding-top: 10px;}  
-.listing-popup1-wrapper .Optional-head h2{font-size: 24px;font-weight:600;color: #000;padding: 40px 0 10px;margin: 0;}
-.listing-popup1-wrapper .Optional-head p {font-size: 17px;color: #747474;line-height:25px;font-weight: 400;}
-.listing-popup1-wrapper .checkbox-content h2{font-size: 26px;color: #000000;}
+.listing-popup1-wrapper .card-body{padding: 24px;overflow-y: scroll !important;max-height:550px;overflow-x: hidden !important;}
+.listing-popup1-wrapper h2 {font-size:16px;font-weight:600;color: #12284C;margin: 0;font-weight: bold;}
+.listing-popup1-wrapper .prag-bottom{color: #747474;padding-bottom: 15px;border-bottom: 1px solid #E5E5E5;padding-top: 10px;}  
+.listing-popup1-wrapper .Optional-head h2{font-weight:600;color: #000;padding-bottom: 16px;margin: 0;}
+.listing-popup1-wrapper .Optional-head h6{margin: 0;}
+.listing-popup1-wrapper .Optional-head p {color: #747474;line-height:25px;font-weight: 400;font-size: 14px;padding-top: 15px;}
+.listing-popup1-wrapper .checkbox-content h2{color: #000000;}
 .listing-popup1-wrapper .form-check{padding: 10px 0;}
 .listing-popup1-wrapper .form-check input{opacity:0; position:absolute;left:-100000%; top:-1000%; visibility:hidden;}
 .listing-popup1-wrapper .form-check input:checked + .form-check-label:after {content:'';height: 9px;width: 20px;border-bottom: 3px solid #20b820;border-left: 3px solid #20b820;transform:rotate(-45deg);display:block;position:absolute;top: 2px;left: 5px;}
@@ -537,12 +541,10 @@ footer .footer-wrapper #footerbox.active ul{display: block;}
 .custom-modal:before {content:'';background-color: rgba(0,0,0,0.5);position: fixed;top: 0;left: 0; right:0; bottom:0; display: none;}
 .custom-modal.active:before {display: block;}
 .custom-modal.active .listing-popup1-wrapper {transition: .3s ease-in-out;transform: translate(-50%,-50%) scale(1);}
-.custom-modal .listing-popup1-wrapper {max-height: 92%;overflow-y: auto;overflow-x: hidden;overscroll-behavior:contain;background: #fff;position: fixed;top: 50%;left: 50%;transform: translate(-50%,-50%);transform: translate(-50%,-50%) scale(0);z-index: 1;}
-.custom-modal .listing-popup1-wrapper::-webkit-scrollbar {width: 0.8em; }
+.custom-modal .listing-popup1-wrapper {max-height: 100%;overflow-y: hidden;overscroll-behavior:contain;background: #fff;position: fixed;top: 50%;left: 50%;transform: translate(-50%,-50%);transform: translate(-50%,-50%) scale(0);z-index: 1;}
+/* .custom-modal .listing-popup1-wrapper::-webkit-scrollbar {width: 0.8em; }
 .custom-modal .listing-popup1-wrapper::-webkit-scrollbar-track {background:#fff;}
-.custom-modal .listing-popup1-wrapper::-webkit-scrollbar-thumb {background-color: darkgrey; border:4px solid #fff; }
-
-
+.custom-modal .listing-popup1-wrapper::-webkit-scrollbar-thumb {background-color: darkgrey; border:4px solid #fff; } */
 
 
 .listing-popup3 .addup-option{display: flex;align-items: center;justify-content: center;padding: 40px;border-bottom: 1px solid #E5E5E5;}
@@ -550,10 +552,11 @@ footer .footer-wrapper #footerbox.active ul{display: block;}
 
 
 .listing-popup4{background-color: #fff;z-index: 99;position: relative;}
-.listing-popup4 .listing-popup1-wrapper .info-blog{display: flex;}
+.listing-popup4 .listing-popup1-wrapper .info-blog{display: flex;padding-bottom: 20px;padding-top: 7px;}
+.listing-popup4 .listing-popup1-wrapper .close-button {-webkit-box-shadow: 0 -1px 4px 0 rgb(0 0 0 / 8%);box-shadow: 0 -1px 4px 0 rgb(0 0 0 / 8%);position: sticky;bottom: 0;padding: 20px;background-color: white;}
 .listing-popup4 .listing-popup1-wrapper .close-button .btn{margin: 40px 0;width: 447px;height: 59px;background-color: #12284C;font-size: 16px;font-weight: 500;border-radius: 50px;color: white;margin: auto;}
-.listing-popup4 .listing-popup1-wrapper .title img{position: absolute;top: 50%;right: 0;transform: translateY(-50%);}
-.listing-popup4 .listing-popup1-wrapper .title{position: relative;}
+.listing-popup4 .listing-popup1-wrapper .title img{position: absolute;top: 50%;right: 20px;transform: translateY(-50%);width: 14px;}
+.listing-popup4 .listing-popup1-wrapper .title{position: relative;position: sticky;top: 0;padding: 16px;background: #fff;border:1px solid rgba(0,0,0,.08);text-align: center;}
 
 
 /**   CREDIT  POPUR   */
@@ -633,13 +636,14 @@ footer .footer-wrapper #footerbox.active ul{display: block;}
     .main-listing .nav-tabs li a{font-size: 12px;font-weight: 500;display: inline-block;color: #12284c;line-height: 24px;text-align: center;padding: 0 18px;border-radius: 30px;}
     .main-listing .nav-tabs li a.active{background-color: #12284c;color: #fff;}
     .main-listing .nav-tabs li a.active:hover {text-decoration:none;}
-
-    .main-listing .listing-wrapper .listing-categories #accordion {display: none;position: fixed;top: 0;right: 0;left: 0;bottom: 0;z-index: 999;background: #fff;}
-    .main-listing .listing-wrapper .listing-categories #accordion.active {display: block;}
-    .main-listing .listing-wrapper .listing-categories #accordion > .head{padding:40px;color: #4c4c4c;font-weight: bold;font-size: 16px;display: flex !important;justify-content: space-between;position: relative;padding: 25px 15px;border-bottom: 1px solid #e5e5e5;}
+    .main-listing .listing-wrapper .listing-categories #accordion {opacity:0;position: fixed;top: 0;right: 0;left: 0;bottom: 0;z-index: 999;background: #fff;transition: .4s ease-in-out;-webkit-transform: scale3d(.9,.9,1);}
+    .main-listing .listing-wrapper .listing-categories #accordion.active {padding:0 60px;padding-top:20%;transition: .4s ease-in-out;-webkit-transition: .4s ease-in-out;opacity:1;max-height: calc(100% - 64px);-webkit-transform: scaleX(1);transform: scaleX(1);}
+    .main-listing .listing-wrapper .listing-categories #accordion > .head{padding:40px;color: #4c4c4c;font-weight: bold;font-size: 16px;display: flex !important;justify-content: space-between;position: relative;padding: 25px 15px;border-bottom: 1px solid #e5e5e5;background-color: white;}
     .main-listing .listing-wrapper .listing-categories #accordion > .head a{padding:10px;margin: 0 -8px;}
     .main-listing .listing-wrapper .listing-categories #accordion > .head > .right {min-width: 24px;}
-    .main-listing .listing-wrapper .listing-categories #accordion > .head > .middle{min-width: 30px;flex-grow: 1;}
+    .main-listing .listing-wrapper .listing-categories #accordion > .head > .right img{width: 14px;}
+    .main-listing .listing-wrapper .listing-categories #accordion > .head > .middle{min-width: 30px;flex-grow: 1;text-align: center;}
+    .main-listing .listing-wrapper .listing-categories #accordion::before{content:"";background-color: rgba(0,0,0,0.5);height: 100vh;width: 100%;position: fixed;top: 0;right: 0;bottom: 0;left: 0;}
 
     .main-listing .listing-wrapper .listing-categories .card-header h2::after {right:15px;}
 
