--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -290,6 +290,7 @@ footer .footer-wrapper #footerbox.active ul{display: block;}
 .main-listing .listing-wrapper .top-area-head .picture-head .span-blue{color: #12284c;font-weight: bold;font-size: 20px;}
 .main-listing .listing-wrapper .top-area-head .picture-head .span-blue img{display: none;}
 .main-listing .listing-wrapper .top-area-head .change h4{margin-bottom: 0px;font-size: 13px;color: #12284c;font-weight: 500;}
+
 .main-listing .listing-wrapper .listing-categories .tabs-area h5{font-size: 14px;color:#000000;margin-left: 15px;}
 .main-listing .listing-wrapper .listing-categories .tabs-area .delivery,.main-listing .listing-wrapper .listing-categories .tabs-area .pickup{margin-bottom: 10px;}
 .main-listing .listing-wrapper .listing-categories .tabs-area{padding: 25px 0;border-bottom: 1px solid #e5e5e5;}
@@ -300,7 +301,14 @@ footer .footer-wrapper #footerbox.active ul{display: block;}
 .main-listing .listing-wrapper .listing-categories .card-header h2.collapsed::after{transform:rotate(180deg)}
 .main-listing .listing-wrapper .listing-categories #accordion .card-body{padding:0;}
 .main-listing .listing-wrapper .listing-categories .card-body li:nth-child(1) a {margin: 0;}
-.main-listing .listing-wrapper .listing-categories .card-body a{color: #000000;font-size: 14px;margin-top: 16px;display: inline-block;font-weight: 500;margin-left: 6px;}
+
+
+.main-listing .listing-wrapper .listing-categories .filter-checkbox label {color: #000000;font-size: 14px;display: inline-block;font-weight: 500;margin: 0;padding: 8px 0 8px 30px;position: relative;}
+.main-listing .listing-wrapper .listing-categories .filter-checkbox label:before {content: '';border: 3px solid #dadada;width: 20px;height: 20px;display: block;border-radius: 3px;position: absolute;left: 0;top: 50%;transform: translateY(-50%);-webkit-transform: translateY(-50%);}
+.main-listing .listing-wrapper .listing-categories .filter-checkbox input {opacity: 0;visibility: hidden;top: -1000px;left: -10000px;position: absolute;}
+.main-listing .listing-wrapper .listing-categories .filter-checkbox input:checked+label:after {content: '';height: 6px;border-radius: 2px;width: 11px;border-bottom: 3px solid #2dbbdb;border-left: 3px solid #2dbbdb;transform: translateY(-50%) rotate(-45deg);-webkit-transform: translateY(-50%) rotate(-45deg);display: block;position: absolute;top: 46%;left: 5px;}
+
+
 .main-listing .listing-wrapper .products-grid{border-bottom: 1px solid #DEDEDE;}
 .main-listing .listing-wrapper .products-grid .title h2{margin-top: 5px;color: #12284c;font-size: 28px;font-weight: bold;}
 .main-listing .listing-wrapper .products-grid .actions a{background-color: #12284c;display: inline-block;color: #FFFFFF;font-weight: 500;font-size: 13px;display: flex;justify-content: space-between;width: 140px;height: 33px;text-align: center;line-height: 33px;padding: 0 10px;border-radius: 4px;margin: 30px 0;}
